<resources>
    <!-- Application name -->
    <string name="app_name">SMS Filter</string>

    <!-- Activities names-->
    <string name="quarantined_messages">Quarantined</string>
    <string name="filtered_words">Filtered</string>
    <string name="excepted_phones">Exceptions</string>

    <!-- App textviews -->
    <string name="add_word_textview">Add word to the filter:</string>
    <string name="add_word_hint">Input a word(e.g. taxi)</string>
    <string name="filtered_words_list_textview">Filtered words:</string>
    <string name="main_layout_last_message">Last filtered message:</string>
    <string name="message_phone">Phone number:</string>
    <string name="message_words">Contains words:</string>
    <string name="exception_details_name">Name:</string>
    <string name="exception_details_phone">Phone(s):</string>
    <string name="main_toolbar_text">SMS Filter</string>

    <!-- Navigation view -->
    <string name="navigation_item_home">Home</string>
    <string name="navigation_item_filtered">Filtered words</string>
    <string name="navigation_item_quarantined">Quarantined</string>
    <string name="navigation_item_exceptions">Exceptions</string>
    <string name="navigation_item_about">About</string>
    <string name="navigation_header_service">Service:</string>
    <string name="is_running">RUNNING</string>
    <string name="is_down">DOWN</string>

    <!-- App buttons -->
    <string name="add_word_button">Add</string>
    <string name="delete_word_button">Delete</string>
    <string name="exceptions_button">Exceptions</string>
    <string name="filtered_words_button">Filtered Words</string>
    <string name="quarantined_messages_button">Quarantined</string>

    <!-- Descriptions -->
    <string name="navigation_icon_description">Navigation content</string>

    <!-- Dialogs -->
    <string name="dialog_add_word_to_filter">Add new word</string>
    <string name="positive_button_dialog_add_word">ADD WORD</string>
    <string name="negative_button_dialog_add_word">Cancel</string>
    <string name="toast_empty_string_dialog_add_word">Input a word first!</string>
    <string name="dialog_delete_word_from_filter">Delete word?</string>
    <string name="positive_button_dialog_delete_word">YES</string>
    <string name="negative_button_dialog_delete_word">No</string>
    <string name="toast_delete_word_dialog">Deleted word: </string>
    <string name="dialog_add_word_already_filtered">This word is already filtered!</string>

</resources>
