<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_filter_controller"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ua.kiev.sergiosiniy.smsfilter.activities.FilterController">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:text="@string/add_word_textview"
            android:gravity="center"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="10dp">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/add_word_button"
            android:padding="10dp"
            style="?attr/buttonBarButtonStyle"/>
        <Button
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/delete_word_button"
            style="?attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>
    </ScrollView>



</LinearLayout>
