<FrameLayout
    android:id="@+id/main_activity_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ua.kiev.sergiosiniy.smsfilter.activities.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            style="@style/DescriptionTextViews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_layout_last_message" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_margin="10dp"
            android:padding="5dp">

            <TextView
                style="@style/ContentTextViews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </ScrollView>

        <TextView
            style="@style/DescriptionTextViews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_phone" />

        <TextView
            style="@style/DescriptionTextViews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_words" />

    </LinearLayout>


<android.support.design.widget.FloatingActionButton
android:id="@+id/fab_start_service"
style="@style/FAB"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
 app:fabSize="auto"/>

</FrameLayout>
