<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="ua.kiev.sergiosiniy.smsfilter.activities.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                style="@style/DescriptionTextViews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_layout_last_message" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_margin="10dp"
                android:padding="5dp">

                <TextView
                    style="@style/ContentTextViews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </ScrollView>

            <TextView
                style="@style/DescriptionTextViews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_phone" />

            <TextView
                style="@style/DescriptionTextViews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_words" />

        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_start_service"
        style="@style/Widget.AppCompat.Light.ActionButton.Overflow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="20dp"
        app:fabSize="auto" />
    <!--android:src=""-->


</FrameLayout>

